@@ -21,7 +21,7 @@ PURPOSE.  See the above copyright notices for more information.
 
 // Qmitk
 #include "QmitkAwesomeView.h"
-#include "QmitkStdMultiWidget.h"
+
 
 // Qt
 #include <QMessageBox>
@@ -39,15 +39,17 @@ void QmitkAwesomeView::CreateQtPartControl( QWidget *parent )
   connect( m_Controls.buttonPerformImageProcessing, SIGNAL(clicked()), this, SLOT(DoImageProcessing()) );
 }
 
-void QmitkAwesomeView::OnSelectionChanged( std::vector<mitk::DataNode*> nodes )
+void QmitkAwesomeView::SetFocus()
+{
+  m_Controls.buttonPerformImageProcessing->setFocus();
+}
+
+void QmitkAwesomeView::OnSelectionChanged( berry::IWorkbenchPart::Pointer /*source*/,
+                                           const QList<mitk::DataNode::Pointer>& nodes )
 { 
   // iterate all selected objects, adjust warning visibility
-  for( std::vector<mitk::DataNode*>::iterator it = nodes.begin();
-       it != nodes.end();
-       ++it )
+  foreach( mitk::DataNode::Pointer node, nodes )
   {
-    mitk::DataNode::Pointer node = *it;
-  
     if( node.IsNotNull() && dynamic_cast<mitk::Image*>(node->GetData()) )
     {
       m_Controls.labelWarning->setVisible( false );
@@ -61,10 +63,10 @@ void QmitkAwesomeView::OnSelectionChanged( std::vector<mitk::DataNode*> nodes )
 
 void QmitkAwesomeView::DoImageProcessing()
 {
-  std::vector<mitk::DataNode*> nodes = this->GetDataManagerSelection();
+  QList<mitk::DataNode::Pointer> nodes = this->GetDataManagerSelection();
   if (nodes.empty()) return;
 
-  mitk::DataNode* node = nodes.front();
+  mitk::DataNode::Pointer node = nodes.front();
 
   if (!node)
   {
